# blobd

./: .gitmodules  Cargo.toml  README.md  analyse-includes.js  build  run
.cargo/: config.toml
.devcontainer/: devcontainer.json
analysis/: index.css  index.html  index.tsx  package.json  tsconfig.json
bench/c/: run
bench/go/: .gitignore  build  go.mod  main.go
bench/js/: createObjects.js  package.json  readObject.js  uploadObject.js
bench/rust/: Cargo.toml
bench/s3/: .gitignore  go.mod  main.go
benchmark-plotter/: Cargo.toml
benchmark-plotter/src/: index.css  index.js  main.rs
benchmark-runner/: .gitignore  Cargo.toml  run.sh  system_tuning.sh
benchmark-runner/src/: main.rs
benchmark-types/: Cargo.toml
benchmark-types/src/: lib.rs
benchmarker/: .gitignore  Cargo.toml
benchmarker/src/: lib.rs  main.rs
blobc/: Cargo.toml
blobc/src/: get.rs  main.rs  put.rs  upload.rs  upload_dir.rs
blobd/: Cargo.toml
blobd-client-js/: README.md  package.json  tsconfig.json
blobd-client-js/src/: main.test.ts  main.ts  tokens.ts  types.ts
blobd-client-rs/: Cargo.toml  README.md
blobd-client-rs/src/: lib.rs
blobd-token/: Cargo.toml
blobd-token/src/: lib.rs
blobd-universal-client/: Cargo.toml
blobd-universal-client/src/: direct.rs  fs.rs  kv.rs  lib.rs  lite.rs  rocksdb.rs  s3.rs
blobd/src/: conf.rs  ctx.rs  main.rs  server.rs  stream.rs
blobd/src/endpoint/: batch_create_objects.rs  commit_object.rs  create_object.rs  delete_object.rs  inspect_object.rs  mod.rs  read_object.rs  write_object.rs
client/js/: jest.config.js  package.json  tsconfig.json
client/js/src/: main.test.ts  main.ts
deepdive/: build.js  package.json  tsconfig.json
deepdive/src/: client.css  client.html  client.tsx  server.ts
lab/allocator/: Cargo.toml
lab/allocator/src/: main.rs
lab/allocator/src/buddy_bitmap_containers/: bitmap.rs  mod.rs
lab/allocator/src/tile-bump/: free_list.rs  inode.rs
lab/allocator/src/tile_bump/: free_list.rs  tile.rs
lab/allocator/src/tile_bump_avx512/: mod.rs  ndtreearray.rs
libblobd/: Cargo.toml
libblobd-direct/: Cargo.toml
libblobd-direct/src/: bucket.rs  ctx.rs  exporter.rs  incomplete_list.rs  incomplete_token.rs  lib.rs  metrics.rs  objects.rs  pages.rs  ring_buf.rs  stream.rs  tuples.rs  unaligned_reader.rs  uring.rs  util.rs
libblobd-direct/src/allocator/: README.md  mod.rs  tests.rs
libblobd-direct/src/backing_store/: mod.rs  uring.rs
libblobd-direct/src/journal/: mod.rs
libblobd-direct/src/object/: id.rs  layout.rs  mod.rs  offset.rs  reap.rs  tail.rs
libblobd-direct/src/op/: commit_object.rs  create_object.rs  delete_object.rs  inspect_object.rs  mod.rs  read_object.rs  write_object.rs
libblobd-direct/src/partition/: mod.rs
libblobd-direct/src/persisted_collection/: README.md  btree.rs  dashmap.rs  hashmap.rs  mod.rs  queue.rs  serialisable.rs  vec.rs
libblobd-direct/src/state/: mod.rs
libblobd-direct/src/state/action/: commit_object.rs  create_object.rs  delete_object.rs  mod.rs
libblobd-kv/: Cargo.toml
libblobd-kv/src/: allocator.rs  bundles.rs  ctx.rs  key_lock.rs  lib.rs  log_buffer.rs  metrics.rs  object.rs  util.rs
libblobd-kv/src/backing_store/: file.rs  mod.rs  uring.rs
libblobd-kv/src/op/: delete_object.rs  mod.rs  read_object.rs  write_object.rs
libblobd-lite/: Cargo.toml
libblobd-lite/src/: bucket.rs  ctx.rs  deleted_list.rs  incomplete_list.rs  lib.rs  metrics.rs  object.rs  object_header.rs  object_id.rs  overlay.rs  stream.rs  util.rs
libblobd-lite/src/allocator/: layout.rs  mod.rs  tests.rs
libblobd-lite/src/device/: mock.rs  mod.rs  real.rs
libblobd-lite/src/journal/: merge.rs  mock.rs  mod.rs  real.rs
libblobd-lite/src/op/: commit_object.rs  create_object.rs  delete_object.rs  inspect_object.rs  mod.rs  read_object.rs  write_object.rs
libblobd-lite/src/page/: mod.rs
libblobd-lite/src/test_util/: journal.rs  mod.rs
libblobd/src/: allocator.rs  bucket.rs  bufpool.rs  ctx.rs  deleted_list.rs  free_list.rs  incomplete_list.rs  incomplete_slots.rs  incomplete_token.rs  inode.rs  lib.rs  metrics.rs  object.rs  object_id.rs  page.rs  stream.rs  uring.rs  util.rs
libblobd/src/allocator/: mod.rs  tests.rs
libblobd/src/op/: commit_object.rs  create_object.rs  delete_object.rs  inspect_object.rs  mod.rs  read_object.rs  write_object.rs
libblobd/src/page/: mod.rs  tests.rs
libblobd/src/test_util/: device.rs  journal.rs
script/: .gitignore  client.js  create_object.js  inspect_object.js  package.json  readAllObjects.js  readObject.js  uploadObject.js  uploadObjects.js
script/c/: main.c
script/js/: .gitignore  generateRandomData.js  readAllObjects.js  uploadObject.js  uploadObjects.js
script/rust/src/: main.rs
script/rust/upload-objects/: Cargo.toml
script/rust/upload-objects/src/: main.rs
src/: bucket.c  bucket.h  bucket.rs  conf.c  conf.h  conf.rs  ctx.rs  cursor.c  cursor.h  device.c  device.h  exit.h  flush.c  flush.h  flushstate.c  flushstate.h  free_list.rs  freelist.c  freelist.h  inode.c  inode.h  inode.rs  journal.c  journal.h  list.h  log.c  log.h  lossy_mpsc_queue.c  lossy_mpsc_queue.h  main.c  main.rs  manager.c  manager.h  manager_state.c  manager_state.h  mmap.h  ndtreearray.rs  object.h  object_id.rs  server.c  (+18 more)
src/endpoint/: commit_object.rs  create_object.rs  delete_object.rs  inspect_object.rs  mod.rs  read_object.rs  write_object.rs
src/free_list/: avx512.rs  mod.rs
src/method/: _common.c  _common.h  commit_object.c  commit_object.h  create_object.c  create_object.h  delete_object.c  delete_object.h  inspect_object.c  inspect_object.h  read_object.c  read_object.h  write_object.c  write_object.h
stochastic-stresser/: Cargo.toml
stochastic-stresser/src/: main.rs
store/: Cargo.toml
store/src/: direct.rs  fs.rs  kv.rs  lib.rs  lite.rs  rocksdb.rs  s3.rs
