[workspace]
resolver = "2"
members = [
  "benchmarker",
  "blobc",
  "blobd-client-rs",
  "blobd-token",
  "blobd",
  "libblobd-direct",
  "libblobd-kv",
  "libblobd-lite",
  "stochastic-stresser",
  "store",
]

[profile.release-max]
inherits = "release"
codegen-units = 1
debug = true
lto = true
opt-level = 3
