[workspace]
resolver = "2"
members = [
  "benchmark-plotter",
  "benchmark-runner",
  "benchmark-types",
  "blobc",
  "blobd-client-rs",
  "blobd-token",
  "blobd",
  "libblobd-direct",
  "libblobd-kv",
  "libblobd-lite",
  "stochastic-stresser",
  "store",
]

[profile.release-max]
inherits = "release"
codegen-units = 1
lto = true
opt-level = 3
