[package]
name = "benchmark-plotter"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
ahash = "0.8.12"
benchmark-types = { version = "0.1.0", path = "../benchmark-types" }
maud = "0.27"
once_cell = "1.21.3"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
