[package]
name = "blobd-benchmarker"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
ahash = "0.8.12"
bytesize = { version = "1.2.0", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
futures = "0.3.27"
off64 = "0.9"
parking_lot = "0.12.1"
rand = "0.8.5"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.21"
store = { path = "../store" }
tokio = { version = "1.27.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
