[package]
name = "blobd-client-rs"
description = "Client for blobd"
version = "0.0.1"
homepage = "https://github.com/wilsonzlin/blobd"
repository = "https://github.com/wilsonzlin/blobd.git"
authors = ["Wilson Lin <code@wilsonl.in>"]
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
blobd-token = { version = "0.0.1", path = "../blobd-token" }
bytes = "1.4.0"
futures = "0.3.27"
percent-encoding = "2.2"
reqwest = { version = "0.11", features = ["stream"] }
serde = { version = "1.0", features = ["derive"] }
