[package]
name = "blobd-client-rs"
version = "0.6.0"
description = "Client for blobd"
license = "Apache-2.0"
homepage = "https://github.com/wilsonzlin/blobd"
repository = "https://github.com/wilsonzlin/blobd.git"
authors = ["Wilson Lin <code@wilsonl.in>"]
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
blobd-token = { version = "0.3.0", path = "../blobd-token" }
bytes = "1.4"
futures = "0.3"
itertools = "0.10.5"
off64 = "0.9"
percent-encoding = "2.2"
reqwest = { version = "0.11", features = ["stream"] }
serde = { version = "1.0", features = ["derive"] }
url = "2.3.1"
