[package]
name = "blobd-token"
version = "0.0.1"
description = "Generate and verify tokens used by blobd"
homepage = "https://github.com/wilsonzlin/blobd"
repository = "https://github.com/wilsonzlin/blobd.git"
authors = ["Wilson Lin <code@wilsonl.in>"]
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
hmac = "0.12"
rand = "0.8"
rmp-serde = "1.1"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
