[package]
name = "blobd-token"
version = "0.3.0"
description = "Generate and verify tokens used by blobd"
license = "Apache-2.0"
homepage = "https://github.com/wilsonzlin/blobd"
repository = "https://github.com/wilsonzlin/blobd.git"
authors = ["Wilson Lin <code@wilsonl.in>"]
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
blake3 = "1.3.3"
data-encoding = "2.3"
rand = "0.8"
rmp-serde = "1.1"
serde = { version = "1.0", features = ["derive"] }
