[package]
name = "blobd-universal-client"
version = "0.1.0"
edition = "2021"

[dependencies]
libblobd-lite = { version = "0.1.1", path = "../libblobd-lite" }
libblobd-direct = { version = "0.1.1", path = "../libblobd-direct" }
tinybuf = "0.2.3"
async-trait = "0.1.68"
futures = "0.3.28"
seekable-async-file = "0.11.1"
tokio = { version = "1.28.0", features = ["macros", "time", "rt"] }
off64 = "0.6.0"
tracing = "0.1.37"
