[package]
name = "blobd-universal-client"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.68"
futures = "0.3.28"
libblobd-direct = { version = "0.5.2", path = "../libblobd-direct" }
libblobd-kv = { version = "0.5.7", path = "../libblobd-kv" }
libblobd-lite = { version = "0.2.0", path = "../libblobd-lite" }
num_cpus = "1.15.0"
off64 = "0.6.0"
seekable-async-file = "0.11.3"
serde = "1.0.160"
tinybuf = "0.3.0"
tokio = { version = "1.28.0", features = ["macros", "time", "rt"] }
tracing = "0.1.37"
