[package]
name = "blobd"
version = "0.0.1"
description = "Blob storage designed for huge amounts of random reads and small objects with constant latency"
license = "SSPL-1.0"
homepage = "https://github.com/wilsonzlin/blobd"
repository = "https://github.com/wilsonzlin/blobd.git"
readme = "README.md"
authors = ["Wilson Lin <code@wilsonl.in>"]
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
axum = { version = "0.6", features = ["headers"] }
blobd-token = { version = "0.0.1", path = "../blobd-token" }
bytes = "1.4.0"
clap = { version = "4.1", features = ["derive"] }
data-encoding = "2.3"
futures = "0.3"
itertools = "0.10"
libblobd = { version = "0.0.1", path = "../libblobd" }
off64 = "0.3"
percent-encoding = "2.2"
seekable-async-file = "0.5.3"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
toml = "0.7"
tower-http = { version = "0.4.0", features = ["cors", "trace"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
