[package]
name = "blobd"
version = "0.2.1"
description = "Blob storage designed for huge amounts of random reads and small objects with constant latency"
license = "SSPL-1.0"
homepage = "https://github.com/wilsonzlin/blobd"
repository = "https://github.com/wilsonzlin/blobd.git"
readme = "README.md"
authors = ["Wilson Lin <code@wilsonl.in>"]
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["blobd-direct"]
blobd-lite = ["dep:libblobd-lite"]
blobd-direct = ["dep:libblobd-direct"]

[dependencies]
axum = { version = "0.6", features = ["headers"] }
blake3 = "1.3.3"
blobd-token = { version = "0.2.0", path = "../blobd-token" }
bytes = "1.4.0"
clap = { version = "4.1", features = ["derive"] }
data-encoding = "2.3"
futures = "0.3"
itertools = "0.10"
libblobd-lite = { version = "0.1.1", path = "../libblobd-lite", optional = true }
libblobd-direct = { version = "0.2.0", path = "../libblobd-direct", optional = true }
off64 = "0.6"
percent-encoding = "2.2"
rand = "0.8.5"
rmp-serde = "1.1.1"
seekable-async-file = "0.11.2"
serde = { version = "1.0", features = ["derive"] }
tinybuf = "0.3.0"
tokio = { version = "1", features = ["full"] }
toml = "0.7"
tower-http = { version = "0.4.0", features = ["cors", "trace"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
