[package]
name = "libblobd-direct"
version = "0.1.1"
description = "Library for blobd, direct variant"
license = "SSPL-1.0"
homepage = "https://github.com/wilsonzlin/blobd"
repository = "https://github.com/wilsonzlin/blobd.git"
authors = ["Wilson Lin <code@wilsonl.in>"]
edition = "2021"

[dependencies]
async-stream = "0.3.4"
async-trait = "0.1.68"
blake3 = "1.3.3"
bufpool = "0.2.3"
chrono = "0.4.24"
crossbeam-channel = "0.5.8"
dashmap = "5.4.0"
futures = "0.3"
itertools = "0.10"
libc = "0.2.142"
num = "0.4.0"
num-derive = "0.3"
num-traits = "0.2"
off64 = "0.6"
once_cell = "1.17.1"
parking_lot = "0.12.1"
roaring = "0.10.1"
rustc-hash = "1.1"
serde = { version = "1.0.160", features = ["derive"] }
signal-future = "0.1.1"
struct-name = "0.0.1"
struct-name-macro = "0.0.2"
strum = { version = "0.24", features = ["derive"] }
tinybuf = "0.2.3"
tokio = { version = "1", features = ["macros", "rt", "sync", "time"] }
tracing = "0.1.37"
twox-hash = "=1.6.3" # Pin the version as the docs mention that outputs could change in future versions, which would be fatal: https://docs.rs/twox-hash/1.6.3/src/twox_hash/xxh3.rs.html

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = { version = "0.6.0" }

[dev-dependencies]
rand = "0.8.5"
stochastic-queue = "0.2.0"
tracing-test = "0.2.4"
