[package]
name = "libblobd-kv"
version = "0.7.2"
description = "Library for blobd, KV variant"
license = "SSPL-1.0"
homepage = "https://github.com/wilsonzlin/blobd"
repository = "https://github.com/wilsonzlin/blobd.git"
authors = ["Wilson Lin <code@wilsonl.in>"]
edition = "2021"

[dependencies]
ahash = { version = "0.8.3", features = ["compile-time-rng"] }
async-trait = "0.1"
blake3 = "1.3.3"
bufpool = { version = "0.2.4", features = ["no-pool"] } # Use no-pool as otherwise memory will never get released, and a lot of allocated system memory will sit idle and be wasted. It should only be enabled if the system allocator is very slow, and there's never any bursty workload where a lot of memory could be suddenly allocated and then never used again.
chrono = { version = "0.4.24", features = ["serde"] }
crossbeam-channel = "0.5.8"
dashmap = "5.4.0"
futures = "0.3"
itertools = "0.10"
libc = "0.2.142"
num-derive = "0.4.0"
num-traits = "0.2.15"
off64 = "0.8"
once_cell = "1.17.1"
parking_lot = "0.12.1"
roaring = "0.10.1"
serde = { version = "1.0.160", features = ["derive"] }
signal-future = "0.1.1"
struct-name = "0.0.1"
struct-name-macro = "0.0.2"
strum = { version = "0.24", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt", "sync", "time"] }
tracing = "0.1.37"

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = { version = "0.6.0" }

[dev-dependencies]
rand = "0.8.5"
stochastic-queue = "0.2.0"
tracing-test = "0.2.4"
