[package]
name = "libblobd-lite"
version = "0.2.0"
description = "Library for blobd, lite variant"
license = "Apache-2.0"
homepage = "https://github.com/wilsonzlin/blobd"
repository = "https://github.com/wilsonzlin/blobd.git"
authors = ["Wilson Lin <code@wilsonl.in>"]
edition = "2021"

[dependencies]
ahash = "0.8.12"
async-recursion = "1.0.4"
async-stream = "0.3.4"
async-trait = "0.1"
chrono = "0.4.24"
dashmap = "5.4.0"
futures = "0.3"
itertools = "0.10"
num-derive = "0.4"
num-traits = "0.2"
off64 = "0.8"
parking_lot = "0.12.1"
roaring = "0.11.2"
seekable-async-file = { version = "0.14", features = ["tokio_file"] }
serde = { version = "1.0.160", features = ["derive"] }
signal-future = "0.1.1"
struct-name = "0.0.1"
struct-name-macro = "0.0.2"
strum = { version = "0.24", features = ["derive"] }
tokio = { version = "1", features = ["macros", "sync"] }
tracing = "0.1.37"
twox-hash = "=1.6.3" # Pin the version as the docs mention that outputs could change in future versions, which would be fatal: https://docs.rs/twox-hash/1.6.3/src/twox_hash/xxh3.rs.html
write-journal = { version = "0.14", features = ["io_file"] }

[dev-dependencies]
rand = "0.8.5"
stochastic-queue = "0.2.0"
tracing-test = "0.2.4"
