[package]
name = "libblobd"
version = "0.1.1"
description = "Library for blobd"
license = "SSPL-1.0"
homepage = "https://github.com/wilsonzlin/blobd"
repository = "https://github.com/wilsonzlin/blobd.git"
authors = ["Wilson Lin <code@wilsonl.in>"]
edition = "2021"

[dependencies]
async-recursion = "1.0.4"
async-stream = "0.3.4"
async-trait = "0.1.68"
chrono = "0.4.24"
dashmap = "5.4.0"
futures = "0.3"
itertools = "0.10"
num-derive = "0.3"
num-traits = "0.2"
off64 = "0.6"
rustc-hash = "1.1"
seekable-async-file = "0.11.1"
serde = { version = "1.0.160", features = ["derive"] }
signal-future = "0.0.1"
struct-name = "0.0.1"
struct-name-macro = "0.0.2"
strum = { version = "0.24", features = ["derive"] }
tinybuf = "0.2.3"
tokio = { version = "1", features = ["macros", "sync"] }
tracing = { version = "0.1.37", features = ["release_max_level_info"] }
twox-hash = "=1.6.3" # Pin the version as the docs mention that outputs could change in future versions, which would be fatal: https://docs.rs/twox-hash/1.6.3/src/twox_hash/xxh3.rs.html
write-journal = "0.10.1"

[dev-dependencies]
rand = "0.8.5"
tracing-test = "0.2.4"
