[package]
name = "blobd-stochastic-stresser"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = []
instrumentation = ["dep:console-subscriber", "tokio/tracing"] # https://github.com/tokio-rs/console/blob/main/console-subscriber/README.md#enabling-tokio-instrumentation

[dependencies]
bytesize = { version = "1.2.0", features = ["serde"] }
console-subscriber = { version = "0.1.8", optional = true }
futures = "0.3.27"
off64 = "0.8"
rand = "0.8.5"
serde = { version = "1.0.164", features = ["derive"] }
serde_yaml = "0.9.21"
stochastic-queue = "0.1.1"
store = { path = "../store" }
strum_macros = "0.24.3"
tokio = { version = "1.27.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
twox-hash = "1.6.3"
